--- a/index.html
+++ b/index.html
@@ -3,10 +3,16 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Honk&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="./style.css">
         <title>JS First Snack</title>
     </head>
     <body>
-        <h1>Great Scott</h1>
+
+        <h1 class="pos-ab">GREAT SCOTT!!</h1>
+        
 
 
         <script src="./js/app.js"></script>
